test/Feature/Output/MultipleFreeResolution.c.tmp.klee-out/test000002.ptr.err
Error: memory error: out of bound pointer
File: /home/sanghu/TracerX/tracerx/test/Feature/MultipleFreeResolution.c
Line: 40
assembly.ll line: 123
Stack: 
	#000000123 in main () at /home/sanghu/TracerX/tracerx/test/Feature/MultipleFreeResolution.c:40
Info: 
	address: 33295088
	next: object at 33384224 of size 15
		MO7[15] allocated at global:.str
	prev: object at 33294944 of size 4
		MO28[4] allocated at make_int():  %2 = call noalias i8* @malloc(i64 4) #8, !dbg !136
